--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <!--bootstrap-->
     <link href="//cdn.jsdelivr.net/npm/@sweetalert2/theme-minimal/minimal.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css"/>
-    <link rel="stylesheet" href="style/responsive.css">
+    <link rel="stylesheet" href="responsive.css">
     
     <title>Uma mensagem por dia</title>
 </head>
@@ -23,12 +23,12 @@
     </div>
 
     <div class="botao">
-        <button type="button" id="botaoAperte" class="btn btn-primary aperte" onclick=abreModal()>Aperte aqui!</button>
+        <button type="button" id="botaoAperte" class="btn btn-primary btn-lg aperte" onclick=abreModal()>Aperte aqui!</button>
     </div>
     
     <div class="rodape">
     <footer>
-        Designed Fernanda Tatsch
+        Designed by Fernanda Tatsch
     </footer>
     </div>
 
