--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="style.css"/>
     <link rel="stylesheet" href="responsive.css">
     
-    <title>Uma mensagem por dia</title>
+    <title>Uma mensagem de Natal</title>
 </head>
 <body>
     <div class="titulo">
